Modified links of images and added a menu option

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
       <li>
        <a href="#home" class="menu-scroll active aD a9 am az aE aF aG hover:aH dark:hover:aI">Home</a>
       </li>
+      <li>
+       <button class="menu-scroll aD a9 am az aE aF aG hover:aH dark:hover:aI" onclick="redirect('git.ghink.net/RigelMC');">Git</button>
+      </li>
       <li class="submenu-item aJ ac">
        <a href="javascript:void(0)" class="submenu-taggler aD a9 am az aE aF aG hover:aH dark:hover:aI">Server Maps
         <span class="aK">
@@ -120,10 +123,10 @@
    <div class="a4 a1v lg:a1S/2">
     <div class="wow fadeInRight ac a3h a1B ah[560px] a4 ae[700px] lg:a3a" data-wow-delay=".3s">
      <div class="a1 a2 a29 lg:a3i/12">
-      <img src="https://git.ghink.net/Ghink/rigelmc-main/raw/commit/56601443f7027c81b263065204824297512afbe0/static/image/image-2.png" alt="hero-image">
+      <img src="https://git.ghink.net/RigelMC/rigelmc-main/raw/commit/56601443f7027c81b263065204824297512afbe0/static/image/image-2.png" alt="hero-image">
      </div>
      <div class="a1 a3 a10 a2w">
-      <img src="https://git.ghink.net/Ghink/rigelmc-main/raw/commit/56601443f7027c81b263065204824297512afbe0/static/image/image-1.png" alt="hero-image">
+      <img src="https://git.ghink.net/RigelMC/rigelmc-main/raw/commit/56601443f7027c81b263065204824297512afbe0/static/image/image-1.png" alt="hero-image">
       <div class="a1 a3j a3k a2D a2a a4 aT a28 a3l a16 a3b a3m[6px] dark:a2v dark:a3l dark:an dark:a3c">
       </div>
      </div>
